# NoWall

./: .gitignore  .project  CMakeLists.txt  CalculationZone.h  Equation.cpp  Equation.h  Field.cpp  Field.h  Field.hpp  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  FileWriter.hpp  FiniteMatrix.cpp  FiniteMatrix.h  FiniteMatrix.hpp  FiniteVolumeOperations.h  FiniteVolumeOperations.hpp  ForAllOperators.h  ForAllOperators.hpp  Grid.cpp  Grid.h  Help.h  Instrumentor.h  Instrumentor.hpp  NoWall.cppcheck  Paralel.cpp  Paralel.h  Paralel.hpp  Problem.cpp  Problem.h  Problem.hpp  Processor.cpp  Processor.hpp  Variable.cpp  Variable.h  Variable.hpp  help.hpp  main.cpp
NoWall-cppcheck-build-dir/: Equation.a1  Equation.a2  Field.a1  Field.a2  FileReader.a1  FileWriter.a1  FileWriter.a2  FiniteMatrix.a1  Grid.a1  Paralel.a1  Paralel.a2  Problem.a1  Problem.a2  Variable.a1  Variable.a2  files.txt  lastResults.xml  main.a1  statistics.txt
Profiling/: Profile-10.json  Profile-11.json  Profile-12.json  Profile-13.json  Profile-14.json  Profile-15.json  Profile-16.json  Profile-17.json  Profile-18.json  Profile-19.json  Profile-20.json  Profile-21.json  Profile-22.json  Profile-23.json  Profile-24.json  Profile-25.json  Profile-26.json  Profile-27.json  Profile-28.json  Profile-29.json  Profile-3.json  Profile-30.json  Profile-31.json  Profile-4.json  Profile-5.json  Profile-6.json  Profile-7.json  Profile-8.json  Profile-9.json
Results/: Grid.xyz  Grid_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_.xyz  Grid_NxM-1200x10_Lxa-120x1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_.xyz  Grid_NxM-1200x10_Lxa-80x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_.xyz  Grid_NxM-2400x20_Lxa-120x1_Ex-40_q-1.2_m-1.51755_beta-10_LeFxZ-1x0.3_.xyz  Grid_NxM-4800x40_Lxa-120x1_Ex-40_q-1.2_m-1.52457_beta-10_LeFxZ-1x0.3_.xyz  Grid_NxM-6000x20_Lxa-120x0.1_Ex-40_q-1.2_m-1.57511_beta-10_LeFxZ-1x0.3_.xyz  Grid_NxM-6000x20_Lxa-80x1_Ex-40_q-1.2_m-4.7159_beta-10_LeFxZ-1x0.3_.xyz  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_0.f  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_0.q  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_1000.f  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_1000.q  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_10000.f  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_10000.q  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_11000.f  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_11000.q  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_12000.f  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_12000.q  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_13000.f  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_13000.q  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_14000.f  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_14000.q  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_15000.f  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_15000.q  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_16000.f  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_16000.q  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_17000.f  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_17000.q  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_18000.f  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_18000.q  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_19000.f  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_19000.q  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_2000.f  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_2000.q  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_20000.f  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_20000.q  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_21000.f  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_21000.q  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_22000.f  Sol_NxM-1200x10_Lxa-120x0.1_Ex-40_q-1.2_m-2_beta-10_LeFxZ-1x0.3_22000.q  (+256 more)
dataprocess/: CMakeLists.txt  avsxf.cpp  data.hpp  datamain.cpp  datamanager.cpp  datamanager.hpp  lewis.cpp  qvsxf.cpp  readdata.hpp  xf_vs_lef.cpp  xfvsle.cpp
inc/: Equation.hpp  Field.hpp  FileReader.hpp  FileWriter.hpp  FiniteMatrix.hpp  FiniteVolumeOperations.hpp  ForAllOperators.hpp  Grid.hpp  Instrumentor.hpp  Paralel.hpp  Problem.hpp  Variable.hpp  communicator.hpp  environment.hpp  equation.hpp  field.hpp  filereader.hpp  filewriter.hpp  finitematrix.hpp  finitevolumeoperations.hpp  foralloperators.hpp  grid.hpp  instrumentor.hpp  messages.hpp  mpi.h  paralel.hpp  parameters.hpp  problem.hpp  systemofequations.hpp  variable.hpp
src/: CMakeLists.txt  Equation.cpp  Field.cpp  FileReader.cpp  FileWriter.cpp  FiniteMatrix.cpp  Grid.cpp  Help.cpp  Paralel.cpp  Problem.cpp  Variable.cpp  equation.cpp  field.cpp  filereader.cpp  filewriter.cpp  finitematrix.cpp  grid.cpp  main.cpp  messages.cpp  paralel.cpp  problem.cpp  variable.cpp
test/: CMakeLists.txt  mpiHelpers.hpp  test-main.cpp  test.cpp  testField.cpp  testGrid.cpp
